Number of improvements and bug fixes (#1142)
* Scroll in status change dropdown #1124

* Remove follow e2e tests as it will was unified with likes #1141

* Rented Listing page- Update future booking text in OHE section #1130

* The tooltip is overflowing on mobile #1132

* bug fix

* more text changes

* revert

--- a/front-gateway/src/components/Listing/style/_ohe-list.scss
+++ b/front-gateway/src/components/Listing/style/_ohe-list.scss
@@ -93,7 +93,7 @@
   color: #4a4a4a;
   font-size: 13px;
   line-height: 21px;
-  padding: 10px 0;
+  padding: 10px;
 }
 
 .listing-followers-count {
